[package]
name = "op_grafitti"
version = "0.1.0"
edition = "2021"
description = "A webapi that lets you write data to the bitcoin blockchain using op_return"
repository = "https://github.com/matthiasdebernardini/op_graffiti"
categories = ["web-programming"]
keywords = ["bitcoin", "bdk"]
license = "MIT"

[dependencies]
doc-comment = "0.3.3"
axum = { version = "0.7.5", features = ["macros", "multipart"] }
bdk_wallet = { git = "https://github.com/bitcoindevkit/bdk", tag = "v1.0.0-alpha.13", features = ["std"], default-features = false }
bdk_chain = { git = "https://github.com/bitcoindevkit/bdk", tag = "v1.0.0-alpha.13"}
bdk_electrum = { git = "https://github.com/bitcoindevkit/bdk", tag = "v1.0.0-beta.1" }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_derive = "1.0.203"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "json", "chrono", "uuid"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde_json", "json"] }
better-panic = "0.3.0"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
anyhow = "1.0.86"
thiserror = "1.0.61"
chrono = { version = "0.4.38", features = ["serde"] }
tracing-error = "0.2.0"
color-eyre = "0.6.3"
bitflags = "2.6.0"
syn = "2.0.71"
redox_syscall = "0.5.2"
regex-automata = "0.4.7"
regex-syntax = "0.8.4"
rustls = "0.23.11"
rustls-webpki = "0.102.5"
sync_wrapper = "1.0.1"
windows-sys = "0.52.0"
windows-targets = "0.52.6"
bitcoincore-rpc = "0.19.0"
electrsd = { version = "0.28.0", features = ["esplora_a33e97e1"] }

[profile.dev]
debug = 0
